--- a/Homework_05/Dockerfile
+++ b/Homework_05/Dockerfile
@@ -6,21 +6,17 @@ COPY /app /app
 RUN apt-get update \
 && apt-get install -y patchelf binutils libgcc1 upx\
 && pip3 install pyinstaller virtualenv staticx \
-&& pip freeze > requirements.txt \
-&& python -m venv venv
+&& pip install --upgrade pip
 
-# virtualenv is needed by pyinstaller
+# create virtualenv
+RUN python -m venv venv
 ENV PATH $PATH:venv/bin/activate
-
 RUN . venv/bin/activate
-RUN pip3 install Flask==1.1.2
 RUN pip3 install -r /app/requirements.txt
 
-# pyinstaller optimizes our flask app
+
 RUN PYTHONOPTIMIZE=1 pyinstaller --onefile --strip --paths /venv/lib/site-packages \
 			-a --clean --upx-dir=/usr/bin/ app.py \
-# staticx converts app to static binary that can be run on Scratch image \
-# also libgcc library is needed for on scratch
 && staticx -l /lib/x86_64-linux-gnu/libgcc_s.so.1 --strip /app/dist/app appc
 
 RUN mkdir /app/tmp
