--- a/Homework_05/app/requirements.txt
+++ b/Homework_05/app/requirements.txt
@@ -1,4 +1,15 @@
-click==6.7
-flask==1.1.2
-Jinja2==2.10
-Werkzeug==0.14.1
+click==8.0.3
+Flask==2.0.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+MarkupSafe==2.0.1
+nltk==3.6.5
+pyelftools==0.27
+regex==2021.11.10
+staticx==0.13.6
+TPP==0.4
+tqdm==4.62.3
+Werkzeug==2.0.2
+xpp==0.0.0.0a0.dev20210526
+
