--- a/Homework_05/Dockerfile
+++ b/Homework_05/Dockerfile
@@ -14,7 +14,7 @@ ENV PATH $PATH:venv/bin/activate
 RUN . venv/bin/activate
 RUN pip3 install -r /app/requirements.txt
 
-
+# pyinstallers needs site-packages from venv
 RUN PYTHONOPTIMIZE=1 pyinstaller --onefile --strip --paths /venv/lib/site-packages \
 			-a --clean --upx-dir=/usr/bin/ app.py \
 && staticx -l /lib/x86_64-linux-gnu/libgcc_s.so.1 --strip /app/dist/app appc
