--- a/Homework_05/Dockerfile
+++ b/Homework_05/Dockerfile
@@ -6,7 +6,6 @@ COPY /app /app
 RUN apt-get update \
 && apt-get install -y patchelf binutils libgcc1 upx\
 && pip3 install pyinstaller virtualenv staticx \
-&& pip install --upgrade pip
 
 # create virtualenv
 RUN python -m venv venv
@@ -14,7 +13,7 @@ ENV PATH $PATH:venv/bin/activate
 RUN . venv/bin/activate
 RUN pip3 install -r /app/requirements.txt
 
-
+# pyinstallers needs site-packages from venv
 RUN PYTHONOPTIMIZE=1 pyinstaller --onefile --strip --paths /venv/lib/site-packages \
 			-a --clean --upx-dir=/usr/bin/ app.py \
 && staticx -l /lib/x86_64-linux-gnu/libgcc_s.so.1 --strip /app/dist/app appc
